[gd_scene load_steps=13 format=2]

[ext_resource path="res://ui/login.gd" type="Script" id=1]
[ext_resource path="res://ui/texture/l_bg_yellow.tres" type="Texture" id=2]
[ext_resource path="res://ui/texture/l_bg_blue.tres" type="Texture" id=3]
[ext_resource path="res://binary/font/Acme-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://ui/texture/l_bg_red.tres" type="Texture" id=5]
[ext_resource path="res://ui/texture/l_bg_green.tres" type="Texture" id=6]
[ext_resource path="res://binary/images/bg/splash/2a5a6fd59691cb4b648fcac877e1469e.jpeg" type="Texture" id=7]
[ext_resource path="res://ui/comfirm_box.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_bottom = 4
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 4 )

[node name="Login" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
expand = true
stretch_mode = 7
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
account_path = NodePath("CenterContainer/TextureRect/VBoxContainer/HBoxContainer/AccountEdit")
pw_path = NodePath("CenterContainer/TextureRect/VBoxContainer/HBoxContainer2/PWEdit")
alert_path = NodePath("CenterContainer/Comfirm")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="NinePatchRect" parent="CenterContainer"]
margin_left = 782.0
margin_top = 341.0
margin_right = 1582.0
margin_bottom = 841.0
rect_min_size = Vector2( 800, 500 )
texture = ExtResource( 2 )
patch_margin_left = 19
patch_margin_top = 17
patch_margin_right = 16
patch_margin_bottom = 17

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="Control" parent="CenterContainer/TextureRect/VBoxContainer"]
margin_right = 800.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/TextureRect/VBoxContainer"]
margin_top = 113.0
margin_right = 800.0
margin_bottom = 173.0
size_flags_vertical = 10
custom_constants/separation = 50

[node name="AccountLabel" type="Label" parent="CenterContainer/TextureRect/VBoxContainer/HBoxContainer"]
margin_left = 175.0
margin_top = 10.0
margin_right = 375.0
margin_bottom = 49.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 10
custom_fonts/font = SubResource( 1 )
text = "ACCOUNT"
align = 2
valign = 1

[node name="AccountEdit" type="TextEdit" parent="CenterContainer/TextureRect/VBoxContainer/HBoxContainer"]
margin_left = 425.0
margin_right = 625.0
margin_bottom = 60.0
rect_min_size = Vector2( 200, 60 )
size_flags_horizontal = 2
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "chamo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/TextureRect/VBoxContainer"]
margin_top = 203.0
margin_right = 800.0
margin_bottom = 263.0
size_flags_vertical = 2
custom_constants/separation = 50

[node name="PWLabel" type="Label" parent="CenterContainer/TextureRect/VBoxContainer/HBoxContainer2"]
margin_left = 175.0
margin_top = 10.0
margin_right = 375.0
margin_bottom = 49.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 10
custom_fonts/font = SubResource( 1 )
text = "PASSWORD"
align = 2
valign = 1

[node name="PWEdit" type="TextEdit" parent="CenterContainer/TextureRect/VBoxContainer/HBoxContainer2"]
margin_left = 425.0
margin_right = 625.0
margin_bottom = 60.0
rect_min_size = Vector2( 200, 60 )
size_flags_horizontal = 2
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "123456"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer3" type="HBoxContainer" parent="CenterContainer/TextureRect/VBoxContainer"]
margin_top = 326.0
margin_right = 800.0
margin_bottom = 406.0
size_flags_vertical = 2
custom_constants/separation = 20

[node name="Control" type="Control" parent="CenterContainer/TextureRect/VBoxContainer/HBoxContainer3"]
margin_right = 50.0
margin_bottom = 80.0
rect_min_size = Vector2( 50, 0 )

[node name="LoginBtn" type="TextureRect" parent="CenterContainer/TextureRect/VBoxContainer/HBoxContainer3"]
margin_left = 73.0
margin_right = 273.0
margin_bottom = 80.0
rect_min_size = Vector2( 200, 80 )
size_flags_horizontal = 6
texture = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="CenterContainer/TextureRect/VBoxContainer/HBoxContainer3/LoginBtn"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 4 )
text = "LOGIN"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RegistBtn" type="TextureRect" parent="CenterContainer/TextureRect/VBoxContainer/HBoxContainer3"]
margin_left = 299.0
margin_right = 499.0
margin_bottom = 80.0
rect_min_size = Vector2( 200, 80 )
size_flags_horizontal = 6
texture = ExtResource( 5 )
expand = true

[node name="Label" type="Label" parent="CenterContainer/TextureRect/VBoxContainer/HBoxContainer3/RegistBtn"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 4 )
text = "REGIST"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClearBtn" type="TextureRect" parent="CenterContainer/TextureRect/VBoxContainer/HBoxContainer3"]
margin_left = 526.0
margin_right = 726.0
margin_bottom = 80.0
rect_min_size = Vector2( 200, 80 )
size_flags_horizontal = 6
texture = ExtResource( 6 )
expand = true

[node name="Label" type="Label" parent="CenterContainer/TextureRect/VBoxContainer/HBoxContainer3/ClearBtn"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 4 )
text = "CLEAR"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="Control" parent="CenterContainer/TextureRect/VBoxContainer/HBoxContainer3"]
margin_left = 750.0
margin_right = 800.0
margin_bottom = 80.0
rect_min_size = Vector2( 50, 0 )

[node name="Control" type="Control" parent="CenterContainer/TextureRect/VBoxContainer"]
margin_top = 450.0
margin_right = 800.0
margin_bottom = 500.0
rect_min_size = Vector2( 0, 50 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Comfirm" parent="CenterContainer" instance=ExtResource( 8 )]
visible = false
margin_left = 888.0
margin_top = 424.0
margin_right = 1476.0
margin_bottom = 758.0

[connection signal="gui_input" from="." to="." method="_on_Login_gui_input"]
[connection signal="gui_input" from="CenterContainer/TextureRect/VBoxContainer/HBoxContainer3/LoginBtn" to="." method="_on_LoginBtn_gui_input"]
[connection signal="gui_input" from="CenterContainer/TextureRect/VBoxContainer/HBoxContainer3/RegistBtn" to="." method="_on_RegistBtn_gui_input"]
[connection signal="gui_input" from="CenterContainer/TextureRect/VBoxContainer/HBoxContainer3/ClearBtn" to="." method="_on_ClearBtn_gui_input"]
